syntax = "proto3";

package pos;

option go_package="github.com/Andrewalifb/lpha-pos-system-product-service";

import "google/protobuf/timestamp.proto";
import "alpha-pos-system-product-service/api/proto/common.proto"; 

// PosProductSubCategory
message PosProductSubCategory {
  string sub_category_id = 1;
  string sub_category_name = 2;
  string category_id = 3;
  string company_id = 4;
  google.protobuf.Timestamp created_at = 5;
  string created_by = 6;
  google.protobuf.Timestamp updated_at = 7;
  string updated_by = 8;
}

// Request and Response messages
message CreatePosProductSubCategoryRequest {
  PosProductSubCategory pos_product_sub_category = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message CreatePosProductSubCategoryResponse {
  PosProductSubCategory pos_product_sub_category = 1;
}

message ReadPosProductSubCategoryRequest {
  string sub_category_id = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message ReadPosProductSubCategoryResponse {
  PosProductSubCategory pos_product_sub_category = 1;
}

message UpdatePosProductSubCategoryRequest {
  PosProductSubCategory pos_product_sub_category = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message UpdatePosProductSubCategoryResponse {
  PosProductSubCategory pos_product_sub_category = 1;
}

message DeletePosProductSubCategoryRequest {
  string sub_category_id = 1;
  JWTPayload jwt_payload = 2;
  string jwt_token =3;
}

message DeletePosProductSubCategoryResponse {
  bool success = 1;
}

message ReadAllPosProductSubCategoriesRequest {
  int32 limit = 1;
  int32 page = 2;
  JWTPayload jwt_payload = 3;
  string jwt_token =4;
}

message ReadAllPosProductSubCategoriesResponse {
  repeated PosProductSubCategory pos_product_sub_categories = 1;
  int32 limit = 2;
  int32 page = 3;
  int32 max_page = 4;
  int64 count = 5;
}

// PosProductSubCategoryService
service PosProductSubCategoryService {
  rpc CreatePosProductSubCategory(CreatePosProductSubCategoryRequest) returns (CreatePosProductSubCategoryResponse);
  rpc ReadPosProductSubCategory(ReadPosProductSubCategoryRequest) returns (ReadPosProductSubCategoryResponse);
  rpc UpdatePosProductSubCategory(UpdatePosProductSubCategoryRequest) returns (UpdatePosProductSubCategoryResponse);
  rpc DeletePosProductSubCategory(DeletePosProductSubCategoryRequest) returns (DeletePosProductSubCategoryResponse);
  rpc ReadAllPosProductSubCategories(ReadAllPosProductSubCategoriesRequest) returns (ReadAllPosProductSubCategoriesResponse);
}
